--- a/doan-khoa-app/package.json
+++ b/doan-khoa-app/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "html5-qrcode": "^2.3.8",
     "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.3",
     "next": "16.1.6",
@@ -20,7 +21,8 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
-    "tsx": "^4.21.0"
+    "tsx": "^4.21.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
